# Mobile-Robot-Modeling-ROS2

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_controller/share/robot_controller/: package.sh
install/robot_model/share/robot_model/: package.sh  package.xml
log/: latest_build
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/src/: read_controller.cpp
src/robot_model/: CMakeLists.txt
src/robot_model/src/: holonomic.cpp  non_holonomic.cpp
